[gd_scene load_steps=17 format=2]

[ext_resource path="res://skrypty/playerDetection.gd" type="Script" id=1]
[ext_resource path="res://monster_death_anim.tres" type="Animation" id=2]
[ext_resource path="res://skrypty/MovementControlerTurtle.gd" type="Script" id=3]
[ext_resource path="res://skrypty/Monster-IceGolem.gd" type="Script" id=4]
[ext_resource path="res://grafika/monster/monster-icegolem.png" type="Texture" id=5]
[ext_resource path="res://skrypty/RangeAreaMonster.gd" type="Script" id=6]
[ext_resource path="res://grafika/light.png" type="Texture" id=7]
[ext_resource path="res://muzyka/explosion-6055.mp3" type="AudioStream" id=8]

[sub_resource type="Animation" id=95]
resource_name = "charging"
length = 1.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Monster1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 5, 0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.9, 1.4 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "shootBullets"
}, {
"args": [  ],
"method": "endShoot"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Monster1/Blast:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.9, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 0.1, 0.1 ), Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Monster1/Blast:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.9, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("monsterBody/CollisionShape2D:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.9, 1.3, 1.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 3, 3 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=91]
resource_name = "idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Monster1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=19]
resource_name = "walk"
length = 0.6
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Monster1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 2, 3, 4 ]
}

[sub_resource type="RectangleShape2D" id=92]
extents = Vector2( 34, 25.5001 )

[sub_resource type="RectangleShape2D" id=93]
extents = Vector2( 235.25, 50 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 43, 40 )

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 110, 12 )

[sub_resource type="RectangleShape2D" id=94]
extents = Vector2( 165.5, 24 )

[node name="Monster-IceGolem" type="KinematicBody2D"]
z_index = 1
collision_layer = 0
script = ExtResource( 4 )

[node name="Monster1" type="Sprite" parent="."]
modulate = Color( 0.901961, 0.901961, 0.901961, 1 )
z_index = 3
texture = ExtResource( 5 )
hframes = 6

[node name="Blast" type="Sprite" parent="Monster1"]
visible = false
self_modulate = Color( 0, 0.670588, 1, 0.572549 )
scale = Vector2( 0.1, 0.1 )
z_index = 2
texture = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/charging = SubResource( 95 )
anims/idle = SubResource( 91 )
anims/monster_death = ExtResource( 2 )
anims/walk = SubResource( 19 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -5, 19.5 )
shape = SubResource( 92 )

[node name="TriggerArea" type="Area2D" parent="."]
collision_mask = 0
input_pickable = false
monitorable = false
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TriggerArea"]
position = Vector2( 5.75, 14 )
shape = SubResource( 93 )

[node name="monsterBody" type="Area2D" parent="."]
input_pickable = false
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="monsterBody"]
position = Vector2( 0, 1 )
shape = SubResource( 18 )

[node name="Timer" type="Timer" parent="."]

[node name="MovementControlerMonster" type="Area2D" parent="."]
collision_layer = 0
input_pickable = false
monitorable = false
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MovementControlerMonster"]
position = Vector2( -1, -2 )
shape = SubResource( 20 )

[node name="Timer2" type="Timer" parent="."]

[node name="RangeArea" type="Area2D" parent="."]
collision_layer = 513
collision_mask = 0
input_pickable = false
monitorable = false
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RangeArea"]
position = Vector2( -1.5, 2 )
shape = SubResource( 94 )

[node name="Timer3" type="Timer" parent="."]

[node name="SoundEffectGolem" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -8.0
pitch_scale = 1.3

[connection signal="body_entered" from="TriggerArea" to="TriggerArea" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="TriggerArea" to="TriggerArea" method="_on_Area2D_body_exited"]
[connection signal="area_entered" from="MovementControlerMonster" to="MovementControlerMonster" method="_on_MovementControlerMonster_area_entered"]
[connection signal="area_exited" from="MovementControlerMonster" to="MovementControlerMonster" method="_on_MovementControlerMonster_area_exited"]
[connection signal="body_entered" from="RangeArea" to="RangeArea" method="_on_RangeArea_body_entered"]
[connection signal="body_exited" from="RangeArea" to="RangeArea" method="_on_RangeArea_body_exited"]
